grafana-pub/prod/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-pub
  namespace: guardian
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`dashboard.rss3.dev`) && PathPrefix(`/`)
    services:
    - name: grafana-pub
      port: 80
    middlewares:
      - name: grafana-pub-add-x-webauth-user
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: grafana-pub-add-x-webauth-user
spec:
  headers:
    customRequestHeaders:
      X-WEBAUTH-USER: "viewer"
